// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Debe de mostrar el componente correctamente Debe mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategory={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category={
        Array [
          "Rick and Morty",
        ]
      }
      key="Rick and Morty"
    />
  </ol>
</Fragment>
`;

exports[`Debe de mostrar el componente correctamente Mostrar el componente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategory={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Rick and Morty"
      key="Rick and Morty"
    />
  </ol>
</Fragment>
`;
